[package]
name = "use_try_join"
version = "0.1.0"
authors = ["anonymousGiga <cryptonymGong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = {version = "0.2", features = ["full"]}
